--- a/ecom/views/add.ejs
+++ b/ecom/views/add.ejs
@@ -1,13 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include("./partials/header") %>
+    <div class="container">
+        <div style="width:30%; margin: 100px; border: 1px solid  #FF9900 ; padding: 5vh; box-shadow:  #FF9900 2px 2px 2px 2px;">
+            <div>
+                Add new categorie
+            </div>
+            <form action="/add" method="POST">
+                <div class="form-group">
+                    <label for="Name">Name</label>
+                    <input type="name" class="form-control" id="name" name="name" placeholder="Name">
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="status" id="active" value="active">
+                    <label class="form-check-label" for="active">Active</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="status" id="block" value=" block">
+                    <label class="form-check-label " for="block"> block</label>
+                </div>
+                <div>
+                    <button type="submit" class="btn btn-warning ">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
 
-<head>
-    <meta charset="UTF-8">
-    <title>Add category</title>
-</head>
 
-<body>
-    <form action="/add" method="POST">
+    <!--<form action="/add" method="POST">
         <div>
             <input type="text" placeholder="name" name="name">
         </div>
@@ -18,6 +36,6 @@
         </div>
         <button>submit</button>
     </form>
-</body>
+-->
 
-</html>
+    <%- include("./partials/footer") %>
