--- a/ecom/views/display.ejs
+++ b/ecom/views/display.ejs
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
+<%- include("./partials/header") %>
     <% products.forEach(function(x){%>
         name:
         <%=x.name%>
@@ -17,6 +8,4 @@
                 <%=x.price%>
                     <%})%>
 
-</body>
-
-</html>
+                        <%- include("./partials/footer") %>
