--- a/ecom/views/ecom.ejs
+++ b/ecom/views/ecom.ejs
@@ -1,21 +1,13 @@
-<html>
-
-<head>
-    <title>ecom</title>
-</head>
-
-<body>
-
+<%- include("./partials/header") %>
     <%allcat.forEach(function(cat){%>
-        <a href="/products/<%=cat._id %>">
-            <%=cat.name%>
-        </a>
+        <div class="container">
+            <a href="/products/<%=cat._id %>">
+                <%=cat.name%>
+            </a>
+        </div>
+        <!--<%=cat.status%>-->
+        <%})%>
+            <a class="btn btn-primary" href="/add">click to add categorie</a>
+            <a class="btn btn-primary" href="/products">click to add products</a>
 
-        <%=cat.status%>
-            <%})%>
-                <button><a href="/add">click to add categorie</a></button>
-                <button><a href="/products">click to add products</a></button>
-
-</body>
-
-</html>
+            <%- include("./partials/footer") %>
