--- a/ecom/views/display.ejs
+++ b/ecom/views/display.ejs
@@ -1,11 +1,51 @@
 <%- include("./partials/header") %>
-    <% products.forEach(function(x){%>
-        name:
-        <%=x.name%>
-            quantity:
-            <%=x.quantity%>
-                price:
-                <%=x.price%>
-                    <%})%>
+    <link rel="stylesheet" href="/display.css" type="text/css">
+    <div class="container">
+        <% cate.forEach(function(x){%>
+            <header class="jumbotron">
+                <a href="/categorie/<%=x._id%>">
+                    <div class="container">
+                        <h1>
+                            <%=x.name%>
+                        </h1>
+                    </div>
+                </a>
+                <%})%>
+            </header>
+            <div class="row text-center" style="display:flex; flex-wrap: wrap;">
+                <% products.forEach(function(x){%>
+                    <div class="cl-md-3 col-sm-6 col-lg-4">
+                        <a href="/products/<%=x._id %>/edit">
+                            <div class="thumbnail" style="width: 90%;">
 
-                        <%- include("./partials/footer") %>
+                                <div class="caption">
+                                    <p>name</p>
+                                    <p>
+                                        <%=x.name%>
+                                    </p>
+                                    quantity:
+                                    <%=x.quantity%>
+                                        <p> price:
+                                            <%=x.price%>
+                                        </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <% }) %>
+            </div>
+    </div>
+    <!-- <div class="container">
+        <div class="thumbnail">
+            <% products.forEach(function(x){%>
+                name:
+                <%=x.name%>
+                    quantity:
+                    <%=x.quantity%>
+                        price:
+                        <%=x.price%>
+                            <%})%>
+        </div>
+    </div>-->
+
+    <%- include("./partials/footer") %>
