--- a/ecom/views/editcat.ejs
+++ b/ecom/views/editcat.ejs
@@ -3,19 +3,19 @@
     <div class="container">
         <div class="add">
             <div>
-                Add new categorie
+                Edit categorie
             </div>
-            <form action="/add" method="POST">
+            <form action="/categorie/<%=cat._id%>?_method=PUT" method="POST">
                 <div class="form-group">
                     <label for="Name">Name</label>
-                    <input type="name" class="form-control" id="name" name="cat[name]" placeholder="Name">
+                    <input type="name" class="form-control" id="name" name="cat[name]" value="<%=cat.name%>" placeholder="Name">
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="cat[status]" id="active" value="active">
                     <label class="form-check-label" for="active">Active</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="cat[status]" id="block" value=" block">
+                    <input class="form-check-input" type="radio" name="cat[status]" id="block" value="block">
                     <label class="form-check-label " for="block"> Block</label>
                 </div>
                 <div>
@@ -23,20 +23,9 @@
                 </div>
             </form>
         </div>
+        <form id="delete" action="/categorie/<%= cat._id %>?_method=DELETE" method="post">
+            <button class="btn btn-danger btn-sm">DELETE</button>
+        </form>
     </div>
-
-
-    <!--<form action="/add" method="POST">
-        <div>
-            <input type="text" placeholder="name" name="name">
-        </div>
-        <div>
-            <p>select status</p>
-            active <input type="radio" name="status" value="active"> blocked
-            <input type="radio" name="status" value="block">
-        </div>
-        <button>submit</button>
-    </form>
--->
 
     <%- include("./partials/footer") %>
