--- a/ecom/views/product.ejs
+++ b/ecom/views/product.ejs
@@ -1,6 +1,42 @@
 <%- include("./partials/header") %>
+    <link rel="stylesheet" href="/css/add.css" type="text/css">
+    <div class="container">
+        <div class="add">
+            <div>
+                Add new products
+            </div>
+            <form action="/products" method="POST">
+                <div class="form-group">
+                    <label for="Name">Name</label>
+                    <input type="name" class="form-control" id="name" name="product[name]" placeholder="Name">
+                </div>
+                <div class="form-group">
+                    <label for="categorie">Select categorie</label>
+                    <select class="form-control" id="categorie" name="product[categorie]">
+                    <%cate.forEach(function(cate){%>
+                        <option value="<%=cate._id%>"><%=cate.name%></option>
+                    <%})%>
+                 </select>
+                </div>
 
-    <form action="/products" method="POST">
+                <div class="form-group">
+                    <label for="Quantity">Quantity</label>
+                    <input type="number" class="form-control" id="Quantity" name="product[quantity]" placeholder="Quantity">
+                </div>
+
+                <div class="form-group">
+                    <label for="price">Price</label>
+                    <input type="number" class="form-control" id="price" name="product[price]" placeholder="price">
+                </div>
+
+                <div>
+                    <button type="submit" class="btn btn-warning ">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- <form action="/products" method="POST">
         <div>
             productname <input type="text" placeholder="name" name="product[name]">
         </div>
@@ -12,10 +48,10 @@
                 <option value="<%=cate._id%>"><%=cate.name%></option>
             <%})%>
 </select>
-            <!--</div>
+            </div>
     <div>
         updated dated <input type="text" placeholder="yyyy/mm/dd" name="product[udate]">
-    </div>-->
+    </div>
             <div>
                 quantity <input type="number" placeholder="quantity" name="product[quantity]">
             </div>
@@ -23,6 +59,6 @@
                 price <input type="number" placeholder="price" name="product[price]">
             </div>
             <button>submit</button>
-    </form>
+    </form>-->
 
     <%- include("./partials/footer") %>
