--- a/ecom/views/add.ejs
+++ b/ecom/views/add.ejs
@@ -5,13 +5,13 @@
             <div>
                 Add new categorie
             </div>
-            <form action="/add" method="POST">
+            <form action="/add" method="POST" id="myform">
                 <div class="form-group">
-                    <label for="Name">Name</label>
-                    <input type="name" class="form-control" id="name" name="cat[name]" placeholder="Name">
+                    <label for="name">Name</label>
+                    <input type="name" required class="form-control" id="name" name="cat[name]" placeholder="Name">
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="cat[status]" id="active" value="active">
+                    <input class="form-check-input" type="radio" name="cat[status]" id="active" value="active" checked>
                     <label class="form-check-label" for="active">Active</label>
                 </div>
                 <div class="form-check">
@@ -19,12 +19,22 @@
                     <label class="form-check-label " for="block"> Block</label>
                 </div>
                 <div>
-                    <button type="submit" class="btn btn-warning ">Submit</button>
+                    <button id="submit" type="submit" class="btn btn-warning ">Submit</button>
                 </div>
+                <p id="required"></p>
             </form>
         </div>
     </div>
 
+    <script>
+        var name = $("#myform input[name=name]").val()
+        $('#submit').on('click', function() {
+            if ($("#myform #name").val() == "") {
+                $("#required").text("*All fields are required")
+                return false
+            }
+        });
+    </script>
 
     <!--<form action="/add" method="POST">
         <div>
