--- a/ecom/views/ecom.ejs
+++ b/ecom/views/ecom.ejs
@@ -8,8 +8,13 @@
                 </a>
                 <%})%>
         </div>
-        <a class="btn btn-primary" href="/add">click to add categorie</a>
-        <a class="btn btn-primary" href="/products">click to add products</a>
+        <%if(user){%>
+            <% if(user=='admin'){ %>
+                <a class="btn btn-success" href="/admin">DashBoard</a>
+                <% } %>
+                    <%}%>
+                        <!-- <a class="btn btn-primary" href="/add">click to add categorie</a> -->
+                        <!-- <a class="btn btn-primary" href="/products">click to add products</a> -->
     </div>
     <hr>
 
@@ -17,20 +22,20 @@
         <div class="row text-center" style="display:flex; flex-wrap: wrap;">
             <% products.forEach(function(x){%>
                 <div class="cl-md-3 col-sm-6 col-lg-4">
-                    <a href="/products/<%=x._id %>/edit">
-                        <div class="thumbnail" style="width: 90%;box-shadow: 1px 1px 2px 2px rgb(204, 182, 142);">
-                            <div class="caption">
-                                <p>name</p>
-                                <p>
-                                    <%=x.name%>
+                    <!--<a href="/products/<%=x._id %>/edit"> -->
+                    <div class="thumbnail" style="width: 90%;box-shadow: 1px 1px 2px 2px rgb(204, 182, 142);">
+                        <div class="caption">
+                            <p>name</p>
+                            <p>
+                                <%=x.name%>
+                            </p>
+                            quantity:
+                            <%=x.quantity%>
+                                <p> price:
+                                    <%=x.price%>
                                 </p>
-                                quantity:
-                                <%=x.quantity%>
-                                    <p> price:
-                                        <%=x.price%>
-                                    </p>
-                            </div>
                         </div>
+                    </div>
                     </a>
                 </div>
                 <% }) %>
