--- a/ecom/views/editproduct.ejs
+++ b/ecom/views/editproduct.ejs
@@ -5,7 +5,7 @@
             <div>
                 Edit products
             </div>
-            <form action="/products/<%=product._id%>?_method=PUT" method="POST">
+            <form action="/products/<%=product._id%>?_method=PUT" method="POST" id="myform">
                 <div class="form-group">
                     <label for="Name">Name</label>
                     <input type="name" class="form-control" id="name" value="<%=product.name%>" name="product[name]">
@@ -22,7 +22,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="udate">Quantity</label>
+                    <label for="udate">Updated Date</label>
                     <input type="text" required pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" class="form-control" id="udate" placeholder="yyyy-mm-dd" name="product[udate]">
                 </div>
 
@@ -38,13 +38,34 @@
                 </div>
 
                 <div>
-                    <button type="submit" class="btn btn-warning ">Submit</button>
+                    <button type="submit" id="submit" class="btn btn-warning ">Submit</button>
                 </div>
+                <p id="required"></p>
             </form>
             <form id="delete" action="/products/<%= product._id %>?_method=DELETE" method="post">
                 <button class="btn btn-danger btn-sm">DELETE</button>
             </form>
         </div>
     </div>
+    <script>
+        $('#submit').on('click', function() {
+            if ($("#myform #name").val() == "") {
+                $("#required").text("*All fields are required")
+                return false
+            }
+            if ($("#myform #Quantity").val() == "") {
+                $("#required").text("*All fields are required")
+                return false
+            }
+            if ($("#myform #udate").val() == "") {
+                $("#required").text("*All fields are required")
+                return false
+            }
+            if ($("#myform #price").val() == "") {
+                $("#required").text("*All fields are required")
+                return false
+            }
+        });
+    </script>
 
     <%- include("./partials/footer") %>
