--- a/ecom/public/css/ecom.css
+++ b/ecom/public/css/ecom.css
@@ -6,3 +6,24 @@ body {
     height: 5%;
     background-color: rgb(13, 3, 54);
 }
+
+.thumbnail img {
+    width: 45%;
+}
+
+.thumbnail {
+    padding: 0;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
+}
+
+.price {
+    color: grey;
+    font-size: 22px;
+}
