--- a/ecom/views/admin/admin.ejs
+++ b/ecom/views/admin/admin.ejs
@@ -23,7 +23,7 @@
             <% products.forEach(function(x){%>
                 <div class="cl-md-3 col-sm-6 col-lg-4">
                     <a href="/products/<%=x._id %>/edit">
-                        <div class="thumbnail" style="width: 90%;box-shadow: 1px 1px 2px 2px rgb(204, 182, 142);">
+                        <div class="thumbnail" style="width: 80%;height: 80%;;box-shadow: 1px 1px 2px 2px rgb(204, 182, 142);">
                             <div class="caption">
                                 <p>name</p>
                                 <p>
@@ -34,6 +34,7 @@
                                     <p> price:
                                         <%=x.price%>
                                     </p>
+                                    <img src="http://localhost:3000/<%=x.image%>" width="50%" height="50%">
                             </div>
                         </div>
                     </a>
