--- a/ecom/views/ecom.ejs
+++ b/ecom/views/ecom.ejs
@@ -20,12 +20,17 @@
     </div>
     <hr>
 
+    <form action="/" method="GET">
+        <input type="text" name="search">
+        <button>subnit</button>
+    </form>
+
     <div class="container">
         <div class="row text-center" style="display:flex; flex-wrap: wrap;">
             <% products.forEach(function(x){%>
                 <div class="cl-md-3 col-sm-6 col-lg-4">
                     <!--<a href="/products/<%=x._id %>/edit"> -->
-                    <div class="thumbnail" style="width: 90%;box-shadow: 1px 1px 2px 2px rgb(204, 182, 142);">
+                    <div class="thumbnail" style="width: 80%;height: 80%;;box-shadow: 1px 1px 2px 2px rgb(204, 182, 142);">
                         <div class="caption">
                             <p>name</p>
                             <p>
@@ -36,7 +41,7 @@
                                 <p> price:
                                     <%=x.price%>
                                 </p>
-                                <img src="http://localhost:3000/5b2c07712c0e3d661884d1cf50771179">
+                                <img src="http://localhost:3000/<%=x.image%>" width="50%" height="50%">
                         </div>
                     </div>
                     </a>
