--- a/ecom/views/editcat.ejs
+++ b/ecom/views/editcat.ejs
@@ -1,4 +1,25 @@
 <%- include("./partials/header") %>
+    <style>
+        .loader {
+            border: 16px solid #f3f3f3;
+            /* Light grey */
+            border-top: 16px solid #3498db;
+            /* Blue */
+            border-radius: 50%;
+            width: 120px;
+            height: 120px;
+            animation: spin 2s linear infinite;
+        }
+        
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+    </style>
     <link rel="stylesheet" href="/css/add.css" type="text/css">
     <div class="container">
         <div class="add">
@@ -22,6 +43,7 @@
                     <button type="submit" id="submit" class="btn btn-warning ">Submit</button>
                 </div>
                 <p id="required"></p>
+                <span id="loader1"></span>
             </form>
         </div>
         <form id="delete" action="/categorie/<%= cat._id %>?_method=DELETE" method="post">
@@ -37,6 +59,9 @@
                 return false
             }
         });
+        /*$(window).load(function() {
+            $(".loader").fadeOut("slow");
+        });*/
     </script>
 
 
