--- a/ecom/views/ecom.ejs
+++ b/ecom/views/ecom.ejs
@@ -19,13 +19,17 @@
                             <!-- <a class="btn btn-primary" href="/products">click to add products</a> -->
     </div>
     <hr>
-
-    <form action="/" method="GET">
-        <input type="text" name="search">
-        <button>subnit</button>
+    <form id="form1" method="POST">
+        <input type="text" name="name">
+        <button>search</button>
+    </form>
+    <form id="form2" method="POST">
+        <input type="number" name="price1" required>-
+        <input type="number" name="price2" required>
+        <button>search</button>
     </form>
 
-    <div class="container">
+    <div class="container" id="con">
         <div class="row text-center" style="display:flex; flex-wrap: wrap;">
             <% products.forEach(function(x){%>
                 <div class="cl-md-3 col-sm-6 col-lg-4">
@@ -33,12 +37,12 @@
                     <div class="thumbnail" style="width: 80%;height: 80%;;box-shadow: 1px 1px 2px 2px rgb(204, 182, 142);">
                         <div class="caption">
                             <p>name</p>
-                            <p>
+                            <p id="name">
                                 <%=x.name%>
                             </p>
                             quantity:
                             <%=x.quantity%>
-                                <p> price:
+                                <p id="price"> price:
                                     <%=x.price%>
                                 </p>
                                 <img src="http://localhost:3000/<%=x.image%>" width="50%" height="50%">
@@ -50,5 +54,62 @@
         </div>
     </div>
     </div>
+    <div id="se">
 
+    </div>
+    <script>
+        $(function() {
+            $("#form1").submit(function(event) {
+                event.preventDefault();
+                $.ajax({
+                    type: 'POST',
+                    url: '/search',
+                    data: $('#form1').serialize(),
+                    datatype: 'jsonp',
+                    success: function(k) {
+                        var t = $('#con')
+                        var se = $('#se')
+                        t.html('')
+                        successq(k);
+                    }
+                });
+            });
+        });
+
+        $(function() {
+            $("#form2").submit(function(event) {
+                event.preventDefault();
+                $.ajax({
+                    type: 'POST',
+                    url: '/range',
+                    data: $('#form2').serialize(),
+                    datatype: 'jsonp',
+                    success: function(k) {
+                        var t = $('#con')
+                        var se = $('#se')
+                        t.html('')
+                        successq(k);
+                    }
+                });
+            });
+        });
+
+
+        function successq(k) {
+            var se = $('#se')
+            console.log(k)
+            k.forEach(function(e) {
+                $('#price').html('price' + e.price)
+                se.append('\
+                            <div class="card">\
+                                <img src="http://localhost:3000/' + e.image + '" alt="Denim Jeans" style="width:100%">\
+                                <h1>' + e.name + '</h1>\
+                                <p class="price">' + e.price + '</p>\
+                                 <p>' + e.quantity + '</p>\
+                            </div>\
+                                ');
+                console.log(e.name)
+            });
+        }
+    </script>
     <%- include("./partials/footer") %>
