--- a/ecom/public/css/ecom.css
+++ b/ecom/public/css/ecom.css
@@ -27,3 +27,19 @@ body {
     color: grey;
     font-size: 22px;
 }
+
+.column {
+    float: left;
+    width: 25%;
+    padding: 0 10px;
+}
+
+.row {
+    margin: 0 -5px;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
