--- a/ecom/views/ecom.ejs
+++ b/ecom/views/ecom.ejs
@@ -15,19 +15,38 @@
                     <a class="btn btn-success" href="/admin">DashBoard</a>
                     <%}%>
                         <%}%>
-                            <!-- <a class="btn btn-primary" href="/add">click to add categorie</a> -->
-                            <!-- <a class="btn btn-primary" href="/products">click to add products</a> -->
     </div>
-    <hr>
-    <form id="form1" method="POST">
+    <form id="form1" method="GET">
         <input type="text" name="name">
         <button>search</button>
     </form>
-    <form id="form2" method="POST">
-        <input type="number" name="price1" required>-
-        <input type="number" name="price2" required>
-        <button>search</button>
-    </form>
+
+    <div class="dropdown">
+        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Filter
+        <span class="caret"></span></button>
+        <ul class="dropdown-menu">
+            <li>
+                <form id="form2" method="GET">price
+                    <input type="number" name="price1" min="0" required>-
+                    <input type="number" name="price2" required>
+                    <button>search</button>
+                </form>
+            </li>
+            <li>
+                <form method="GET" id="form3">Price
+                    <input type="radio" name="sort" value=-1>high to low
+                    <input type="radio" name="sort" value=1>Low to high
+                    <button>submit</button>
+                </form>
+                <form method="GET" id="form4">Date
+                    <input type="radio" name="date" value=-1>new to old
+                    <input type="radio" name="date" value=1>old to new
+                    <button>submit</button>
+                </form>
+            </li>
+        </ul>
+    </div>
+    <hr>
 
     <div class="container" id="con">
         <div class="row text-center" style="display:flex; flex-wrap: wrap;">
@@ -55,61 +74,8 @@
     </div>
     </div>
     <div id="se">
-
+        <div id="se2"></div>
     </div>
-    <script>
-        $(function() {
-            $("#form1").submit(function(event) {
-                event.preventDefault();
-                $.ajax({
-                    type: 'POST',
-                    url: '/search',
-                    data: $('#form1').serialize(),
-                    datatype: 'jsonp',
-                    success: function(k) {
-                        var t = $('#con')
-                        var se = $('#se')
-                        t.html('')
-                        successq(k);
-                    }
-                });
-            });
-        });
 
-        $(function() {
-            $("#form2").submit(function(event) {
-                event.preventDefault();
-                $.ajax({
-                    type: 'POST',
-                    url: '/range',
-                    data: $('#form2').serialize(),
-                    datatype: 'jsonp',
-                    success: function(k) {
-                        var t = $('#con')
-                        var se = $('#se')
-                        t.html('')
-                        successq(k);
-                    }
-                });
-            });
-        });
-
-
-        function successq(k) {
-            var se = $('#se')
-            console.log(k)
-            k.forEach(function(e) {
-                $('#price').html('price' + e.price)
-                se.append('\
-                            <div class="card">\
-                                <img src="http://localhost:3000/' + e.image + '" alt="Denim Jeans" style="width:100%">\
-                                <h1>' + e.name + '</h1>\
-                                <p class="price">' + e.price + '</p>\
-                                 <p>' + e.quantity + '</p>\
-                            </div>\
-                                ');
-                console.log(e.name)
-            });
-        }
-    </script>
+    <script src="/js/ecom.js"></script>
     <%- include("./partials/footer") %>
