--- a/ecom/views/partials/header.ejs
+++ b/ecom/views/partials/header.ejs
@@ -7,11 +7,12 @@
     <title>ecom</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/main.css" type="text/css">
 
 </head>
 <style>
-    .navbar {
+    /*.navbar {
         margin: -1%;
         margin-top: -1%;
         background-color: #f0ad4e;
@@ -28,14 +29,14 @@
         height: 50px;
         width: 50px;
         border-radius: 50%;
-    }
+    }*/
 </style>
 
 <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-custom  navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -43,7 +44,7 @@
                   </button>
                 <a class="navbar-brand" href="/">Ecom</a>
             </div>
-            <div class="collapse navbar-collapse in" id="myNavbar">
+            <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <% if(!currentUser){ %>
                         <li><a href="/login">Sign in</a></li>
@@ -59,3 +60,25 @@
             </div>
         </div>
     </nav>
+    <%if(message && message.length > 0 ){%>
+        <div class="alert alert-success">
+            <strong><%=message%></strong>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+        </div>
+        <%}%>
+            <style>
+                .alert {
+                    width: 50%;
+                    background-color: rgba(252, 170, 19, 0.411);
+                    color: black;
+                    text-align: center;
+                    margin-left: 23%;
+                }
+                
+                #message {
+                    color: rgb(0, 0, 73);
+                    margin-left: 35%;
+                }
+            </style>
