--- a/ecom/views/auth/register.ejs
+++ b/ecom/views/auth/register.ejs
@@ -17,8 +17,13 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="mail">Mail</label>
+                    <input type="mail" required class="form-control" id="mail" name="mail" placeholder="mail">
+                </div>
+
+                <div class="form-group">
                     <label for="input-files">Profile picture</label>
-                    <input type="file" required name="picture" id="input-files" class="form-control-file border" />
+                    <input required type="file" name="picture" id="input-files" class="form-control-file border" />
                 </div>
 
                 <div>
