--- a/ecom/views/ecom.ejs
+++ b/ecom/views/ecom.ejs
@@ -13,6 +13,7 @@
             <%}else{%>
                 <%  if(currentUser.role=='admin'){%>
                     <a class="btn btn-success" href="/admin">DashBoard</a>
+                    <a class="btn btn-primary" href="/admin/user">UserDashboard</a>
                     <%}%>
                         <%}%>
     </div>
@@ -68,6 +69,10 @@
                                 </p>
                                 <img src="http://localhost:3000/<%=x.image%>" width="50%" height="50%">
                         </div>
+                        <form action="/cart" method="POST">
+                            <input type="hidden" value="<%=x._id%>" name="product">
+                            <button class="btn btn-warning btn-xs">addtocart</button>
+                        </form>
                     </div>
                     </a>
                 </div>
