--- a/ecom/views/partials/header.ejs
+++ b/ecom/views/partials/header.ejs
@@ -50,6 +50,9 @@
                         <li><a href="/login">Sign in</a></li>
                         <li><a href="/register">Signup</a></li>
                         <% }else{ %>
+                            <li>
+                                <a href="/cart"><img src="/css/cart.jpg" alt="cart" width="26" height="26"></a>
+                            </li>
                             <li><a href="/user">Singned in as
                                 <%= currentUser.username %></a>
                             </li>
