--- a/ecom/views/admin/admin.ejs
+++ b/ecom/views/admin/admin.ejs
@@ -15,6 +15,7 @@
         </div>
         <a class="btn btn-primary" href="/add">click to add categorie</a>
         <a class="btn btn-primary" href="/products">click to add products</a>
+        <a class="btn btn-primary" href="/admin/user">UserDashboard</a>
     </div>
     <hr>
     <%- include("../partials/filter") %>
